Implemented the api. Added queries in Data. Modified api documentation.
